// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FreeTextResponse > renders default as expected 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <div
        class="free-text-response__header-icon"
      >
        <img
          alt=""
          class="w-15 h-15"
          src="/icons/lightning_bolt.svg"
        />
      </div>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="bluedot-p free-text-response__title bluedot-h4"
        >
          Understanding LLMs
        </p>
        <p>
          Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
        </p>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col gap-2"
    >
      <textarea
        class="free-text-response__textarea p-4 container-lined"
        disabled=""
        name="answer"
        placeholder="Login to save your answers"
      />
    </div>
    <a
      class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--primary bg-bluedot-normal link-on-dark free-text-response__login-cta"
      data-testid="cta-link"
      href="http://localhost:3000/login?redirect_to=http%3A%2F%2Flocalhost%3A3000%2F"
    >
      <span
        class="cta-button__text"
      >
        Login to save your answers
      </span>
      <span
        class="cta-button__chevron ml-3"
      >
        <img
          alt="→"
          class="cta-button__chevron-icon size-2"
          src="/icons/chevron_white.svg"
        />
      </span>
    </a>
  </form>
</div>
`;

exports[`FreeTextResponse > renders logged in as expected 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <div
        class="free-text-response__header-icon"
      >
        <img
          alt=""
          class="w-15 h-15"
          src="/icons/lightning_bolt.svg"
        />
      </div>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="bluedot-p free-text-response__title bluedot-h4"
        >
          Understanding LLMs
        </p>
        <p>
          Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
        </p>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col gap-2"
    >
      <textarea
        class="free-text-response__textarea p-4 container-lined"
        name="answer"
        placeholder="Enter your answer here"
      />
    </div>
    <button
      class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--primary bg-bluedot-normal link-on-dark free-text-response__submit"
      data-testid="cta-button"
      type="submit"
    >
      <span
        class="cta-button__text"
      >
        Save
      </span>
    </button>
  </form>
</div>
`;

exports[`FreeTextResponse > renders with saved exercise response 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <div
        class="free-text-response__header-icon"
      >
        <img
          alt=""
          class="w-15 h-15"
          src="/icons/lightning_bolt.svg"
        />
      </div>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="bluedot-p free-text-response__title bluedot-h4"
        >
          Understanding LLMs
        </p>
        <p>
          Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
        </p>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col gap-2"
    >
      <textarea
        class="free-text-response__textarea p-4 free-text-response__textarea--saved container-active bg-[#63C96533] border-[#63C965] text-[#2A5D2A]"
        name="answer"
        placeholder="Enter your answer here"
      />
    </div>
    <button
      class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--primary bg-bluedot-normal link-on-dark free-text-response__submit"
      data-testid="cta-button"
      type="submit"
    >
      <span
        class="cta-button__text"
      >
        Save
      </span>
    </button>
    <p
      class="bluedot-p free-text-response__saved-msg"
    >
      Saved! 🎉
    </p>
  </form>
</div>
`;
